--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^16.2.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^16.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
