--- a/package.json
+++ b/package.json
@@ -37,14 +37,15 @@
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.0",
     "node-sass": "^5.0.0",
+    "path-browserify": "^1.0.1",
     "react": "^16.2.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
+    "react-loading-icons": "^1.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
-    "react-spinners": "^0.11.0",
     "react-toastify": "^8.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
