--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.0",
     "moment": "^2.29.4",
-    "node-sass": "^5.0.0",
+    "node-sass": "^8.x",
     "path-browserify": "^1.0.1",
     "react": "^16.2.0",
     "react-big-calendar": "^1.8.4",
