update node to dart sass

--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.0",
     "moment": "^2.29.4",
-    "node-sass": "^8.x",
+    "node-sass": "npm:sass",
     "path-browserify": "^1.0.1",
     "react": "^16.2.0",
     "react-big-calendar": "^1.8.4",
