add page tracker

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-big-calendar": "^1.8.4",
     "react-datepicker": "^4.7.0",
     "react-dom": "^16.2.0",
+    "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-loading-icons": "^1.1.0",
