--- a/package.json
+++ b/package.json
@@ -6,22 +6,33 @@
   "scripts": {
     "dev": "yarn start",
     "start": "webpack serve --config build-utils/webpack.config.js --env env=dev",
-    "build": "webpack  --config build-utils/webpack.config.js --env env=prod"
+    "build": "webpack  --config build-utils/webpack.config.js --env env=prod",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Zheskiel.labs",
   "license": "ISC",
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "^7.17.7",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.13.13",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-transform-runtime": "^6.23.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.4",
     "dotenv-webpack": "^7.0.2",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^29.7.0",
+    "jest-css-modules-transform": "^4.4.2",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^1.5.1",
     "react-hot-loader": "^4.13.0",
     "style-loader": "^2.0.0",
@@ -33,22 +44,27 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.x",
+    "@testing-library/user-event": "^14.5.2",
     "axios": "^0.26.1",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.0",
     "moment": "^2.29.4",
     "node-sass": "npm:sass",
     "path-browserify": "^1.0.1",
-    "react": "^16.2.0",
+    "react": "18",
     "react-big-calendar": "^1.8.4",
     "react-datepicker": "^4.7.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "18",
     "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-loading-icons": "^1.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
+    "react-test-renderer": "^19.0.0",
     "react-toastify": "^8.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
